--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,16 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
+      - run:
+        name: module install
+        command: |
+          sudo apt-get install -y graphviz
+      - restore_cache:
+          keys:
+          - v1-dependencies-
+
+      - run: dot -V
+
       - run: cat /dev/null | sbt test:compile
 
       - save_cache:
