--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,12 @@
 # Scala CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/sample-config/ for more details
-#
 version: 2
+
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
 
     working_directory: ~/repo
 
@@ -50,3 +44,10 @@ jobs:
 
       # run tests!
       - run: cat /dev/null | sbt test:test
+
+  # deploy方法 参考
+  # https://qiita.com/yousan/items/08de8c3b81b21a57bd5c
+  deploy:
+    machine: true
+    steps:
+      - run: git --version
