--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,42 +6,45 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk
-
+    - image: circleci/openjdk:8-jdk
     working_directory: ~/repo
-
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
 
     steps:
-      - checkout
+    - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "build.sbt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+    # Download and cache dependencies
+    - restore_cache:
+        keys:
+        - v1-dependencies-{{ checksum "build.sbt" }}
+        # fallback to using the latest cache if no exact match is found
+        - v1-dependencies-
 
-      - run:
-        name: module install
-        command: |
-          sudo apt-get install -y graphviz
-      - restore_cache:
-          keys:
-          - v1-dependencies-
+    - run:
+      name: module install
+      command: |
+        sudo apt-get install -y graphviz
+    - restore_cache:
+        keys:
+        - v1-dependencies-
 
-      - run: dot -V
+    - run: dot -V
 
-      - run: cat /dev/null | sbt test:compile
+    - run: cat /dev/null | sbt test:compile
 
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies--{{ checksum "build.sbt" }}
+    - save_cache:
+        paths:
+          - ~/.m2
+        key: v1-dependencies--{{ checksum "build.sbt" }}
 
-      # run tests!
-      - run: cat /dev/null | sbt test:test
 
+
+  # deploy方法 参考
+  # https://qiita.com/yousan/items/08de8c3b81b21a57bd5c
+  deploy:
+    machine: true
+    steps:
+    - run: git --version
