--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,7 @@ jobs:
         # fallback to using the latest cache if no exact match is found
         - v1-dependencies-
 
-    - run:
-      name: module install
-      command: |
-        sudo apt-get install -y graphviz
+    - run: sudo apt-get install -y graphviz
     - restore_cache:
         keys:
         - v1-dependencies-
