--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,12 @@ jobs:
 
     - run: dot -V
 
-    # - run: cat /dev/null | sbt test:compile
+    - run: cat /dev/null | sbt test:compile
 
-    #- save_cache:
-    #    paths:
-    #      - ~/.m2
-    #    key: v1-dependencies--{{ checksum "build.sbt" }}
+    - save_cache:
+        paths:
+          - ~/.m2
+        key: v1-dependencies--{{ checksum "build.sbt" }}
 
     # run tests!
     - run: cat /dev/null | sbt test:test
@@ -47,3 +47,10 @@ jobs:
     machine: true
     steps:
     - run: git --version
+
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - build
+    - deploy
