--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,17 +37,19 @@ jobs:
     # run tests!
     - run: cat /dev/null | sbt test:test
 
-    - run: pwd
-    - run: ls
-    - run: git --version
+  # TODO:
+  # 共有ディレクトリの指定
+  # https://circleci.com/docs/2.0/deployment-integrations/#section=deployment
+
 
   # deploy方法 参考
   # https://qiita.com/yousan/items/08de8c3b81b21a57bd5c
   deploy:
     machine: true
+    working_directory: ~/repo
     steps:
     - run: ls
-    - run: git --version
+    - run: pwd
 
 workflows:
   version: 2
