--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,11 @@ jobs:
     # run tests!
     - run: cat /dev/null | sbt test:test
 
+    - persist_to_workspace:
+        root: .
+        paths:
+          - .
+
   # TODO:
   # 共有ディレクトリの指定
   # https://circleci.com/docs/2.0/deployment-integrations/#section=deployment
@@ -48,8 +53,10 @@ jobs:
     machine: true
     working_directory: ~/repo
     steps:
+    - attach_workspace:
+        at: .
     - run: ls
-    - run: pwd
+    - run: git status
 
 workflows:
   version: 2
