--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,11 @@ jobs:
     - run: cp -r ./target/scala-2.11/api/* docs/api/
 
     - run: cat /dev/null | sbt clean coverage test
+    - run: cd ./target/scala-2.11 | ls | cd ../..
+    - run: cat /dev/null | sbt coverageReport
+    - run: cd ./target/scala-2.11 | ls | cd ../..
     - run: cp -r ./target/scala-2.11/scoverage-report/* docs/coverage/
+
 
     - persist_to_workspace:
         root: .
