--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
     - run: git config user.name "circleci"
     - run: git add docs/*
     - run: git commit -m "[ci skip] update docs"
-    - run: git push
+    - run: git push -u origin $CIRCLE_BRANCH
 
 workflows:
   version: 2
