--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,12 +27,12 @@ jobs:
 
     - run: dot -V
 
-    - run: cat /dev/null | sbt test:compile
+    #- run: cat /dev/null | sbt test:compile
 
-    - save_cache:
-        paths:
-          - ~/.m2
-        key: v1-dependencies--{{ checksum "build.sbt" }}
+    #- save_cache:
+    #    paths:
+    #      - ~/.m2
+    #    key: v1-dependencies--{{ checksum "build.sbt" }}
 
     # doc作成
     - run: scaladoc
