--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,6 @@ workflows:
   workflow:
     jobs:
     - build
-    #- deploy:
-    #    requires:
-    #    - build
+    - deploy:
+        requires:
+        - build
