--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,3 +69,6 @@ workflows:
     - deploy:
         requires:
         - build
+          filters:
+            branches:
+              only: master
